styles/all/theme/abbc3.css
/* Hidden block  */
.hidebox {
	position: relative;
	margin: 5px 0;
	font-weight: normal;
	padding: 39px 19px 14px;
	background-color: #c5e3bf;
	border: 1px solid #72B173;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	border-radius: 4px;
}

.hideboxTitle {
	position: absolute;
	top: -1px;
	left: -1px;
	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
	font-weight: bold;
	font-size: 12px;
	color: #2f4f2f;
	padding: 5px 12px;
	border: 1px solid #72B173;
	-moz-border-radius: 4px 0 4px 0;
	-webkit-border-radius: 4px 0 4px 0;
	border-radius: 4px 0 4px 0;
}

.hideMe {
	background-color: #f2dede;
	border-color: #ebccd1;
	color: #80001c;
}

/* Moderator bbcode */
.ModTable {
	background-color: #FFFFFF;
	border: 1px solid #000000;
	border-collapse: separate;
	border-spacing: 5px;
	padding: 0;
	width: 100%;
	font-size: 0.9em;
	font-weight: normal;
	color: #333333;
	overflow: hidden;
}

.ModTable .exclamation {
	background-color: #ff6060;
	font-weight: bold;
	font-family: "Times New Roman", Verdana;
	font-size: 4em;
	color: #ffffff;
	vertical-align: middle;
	text-align: center;
	width: 1%;
}

.ModTable .rowuser {
	border-bottom: 1px solid #000000;
	font-weight: bold;
}

/* Spoiler */
.spoilwrapper {
	margin: 5px 0;
	font-weight: normal;
	padding: 4px 10px;
	background-color: #fff;
	border: 1px solid #dbdbdb;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	border-radius: 4px;
    color: #333333;
}

.spoiltitle {
    margin: 0;
    padding: 0;
    width: 100%;
}

.btnspoil {
    margin: 2px 5px;
    text-transform: uppercase;
    font-size: 11px;
    font-weight: bold;
    display: block;
    cursor: pointer;
    color: #333;
}

.btnspoil:hover {
    color: #d31141
}

.spoilcontent {
    color: #333333;
    display: none;
    padding: 5px;
    border-top: 1px solid #ccc;
}

/* NFO bbcode */
.NFOTable { width: 100%; }
/* IE6 Only */
* html.nfo {
	line-height: 86%;
	letter-spacing: -2.9px;
	font-size: 10px;
	font-family: Terminal;
}
/* IE7 Only */
*:first-child + html .nfo {
	line-height: 86%;
	letter-spacing: -2.9px;
	font-size: 10px;
	font-family: Terminal;
}
.nfotitle {
	font-weight: bold;
}
.nfo {
	color: #000000;
	font-weight: normal;
	line-height: 70%;
	letter-spacing: -2.5px;
	font-size: 9px;
	font-family: "Courier New", monospace;
	background-color: #ffffff;
}

/* Offtopic bbcode */
.OffTopic {
	position: relative;
	margin: 5px 0;
	font-size: 0.9em;
	font-weight: normal;
	padding: 39px 19px 14px;
	background: #fff;
	border: 1px solid #ddd;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	border-radius: 4px;
}

.OffTopicTitle {
	position: absolute;
	top: -1px;
	left: -1px;
	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
	font-weight: bold;
	font-size: 12px;
	color: #9da0a4; /*#2277DD*/
	background: #f5f5f5;
	padding: 5px 12px;
	border: 1px solid #ddd;
	-moz-border-radius: 4px 0 4px 0;
	-webkit-border-radius: 4px 0 4px 0;
	border-radius: 4px 0 4px 0;
}

.OffTopicText {
	padding: 5px 10px;
	color: #333333;
}

/* Marquee bbcode */
.abbc3-marquee {
	margin: 10px 0;
	padding: 5px;
	display: -moz-inline-box; /* For FF<3 */
	-moz-box-orient: vertical; /* For FF<3 */
	display: inline-block; /* IE <8 needs this tripped back to display: inline; to make it work on block elements */
}

/* abbc3 bbcode buttons */
.abbc3_button {
	min-width: 22px;
	width: auto !important;
	width: 22px;
	height: 22px !important;
	background-color: transparent;
	background-position: center !important;
	background-repeat: no-repeat !important;
	margin: 4px 0 !important;
/*	border: 1px solid #b4bac0 !important;*/
	border: 1px solid transparent !important;
}

.abbc3_button:hover {
	background-color: #ffffdf !important;
	border: 1px solid #bc2a4d !important;
}

.abbc3_select  {
	height: 22px;
	background-color: #fff;
	margin: 4px !important;
	border: 1px solid #b4bac0 !important;
}

.abbc3_toolbar_core, .abbc3_toolbar_custom {
	margin: 0 !important;
	min-height: 30px;
	padding:0 2px;
	border: 1px solid #b4bac0;
	display: block;
	width: 80%;
	background: transparent url('./images/bg_abbc3_silver.gif');
}

